cm4all-beng-proxy (0.5.1) unstable; urgency=low

  * added filter cache
  * processor: fixed base=child assertion failure
  * handler: close request body if it was not consumed
  * static-file: generate Last-Modified and ETag response headers
  * static-file: obey the Content-Type provided by the translation server

 --

cm4all-beng-proxy (0.5) unstable; urgency=low

  * processor: accept c:mode/c:base attributes in any order
  * processor: removed alternative (anchor) rewrite syntax

 -- Max Kellermann <mk@cm4all.com>  Mon, 20 Apr 2009 22:04:19 +0200

cm4all-beng-proxy (0.4.10) unstable; urgency=low

  * processor: lift length limitation for widget parameters
  * translate: abort if a packet is too large
  * translate: support MAX_AGE for the whole response
  * hashmap: fix corruption of slot chain in hashmap_remove_value()

 -- Max Kellermann <mk@cm4all.com>  Fri, 17 Apr 2009 13:02:50 +0200

cm4all-beng-proxy (0.4.9) unstable; urgency=low

  * http-cache: explicitly start reading into cache
  * cgi: clear "headers" variable before publishing the response
  * translate: use DOCUMENT_ROOT as CGI parameter

 -- Max Kellermann <mk@cm4all.com>  Mon, 06 Apr 2009 16:21:57 +0200

cm4all-beng-proxy (0.4.8) unstable; urgency=low

  * translate: allow ADDRESS packets in AJP addresses
  * translate: initialize all fields of a FastCGI address
  * http-cache: close all caching connections on exit
  * processor: don't rewrite SCRIPT SRC attribute when proxying

 -- Max Kellermann <mk@cm4all.com>  Thu, 02 Apr 2009 15:45:46 +0200

cm4all-beng-proxy (0.4.7) unstable; urgency=low

  * http-server: use istream_null for empty request body
  * parser: check for trailing slash only in TAG_OPEN tags
  * parser: added support for XML Processing Instructions
  * processor: implemented XML Processing Instruction "cm4all-rewrite-uri"
  * uri-escape: escape the slash character
  * cache: remove all matching items in cache_remove()
  * http-cache: lock cache items while holding a reference
